--- a/css/index_style.css
+++ b/css/index_style.css
@@ -17,6 +17,8 @@ body {
 }
 :root {
   --prColor: #9c27b0;
+  --btnBg: #9b27b0a8;
+  --brBtn: #9b27b0e0;
 }
 header {
   width: 100%;
@@ -127,7 +129,7 @@ nav ul li a:hover:after {
 .content > div:last-child a {
   flex-basis: 150px;
   height: 80%;
-  background-color: #9b27b0a8;
+  background-color: var(--btnBg);
   text-decoration: none;
   font-size: 18px;
   font-weight: 700;
@@ -135,7 +137,7 @@ nav ul li a:hover:after {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #9b27b0e0;
+  border: 1px solid var(--brBtn);
   border-radius: 4px;
   transition: 300ms;
 }
@@ -187,9 +189,7 @@ nav ul li a:hover:after {
 .active_2 {
   display: block !important;
 }
-.eleslider {
-  display: none;
-}
+
 .dots {
   width: 10%;
   height: 100%;
@@ -199,28 +199,29 @@ nav ul li a:hover:after {
   align-content: center;
 }
 .dots span {
-  margin-top: 8px;
-  width: 9px;
-  height: 24px;
-  background-color: rgba(255, 255, 255, 0.4);
+  margin-top: 15px;
+  width: 22px;
+  height: 22px;
+  border: 1px solid #fff;
+  border-radius: 50%;
 }
-.active_3 {
-  background-color: #fff !important;
+.dots span:nth-child(1){
+  background-color: #9c27b0;
+}
+.dots span:nth-child(2){
+  background-color: #1e2ba4;
+}
+.dots span:nth-child(3){
+  background-color: #e91e63;
+}
+.dots span:nth-child(4){
+  background-color: #ff5722;
 }
 .eleslider p {
   color: #fff;
   font-size: 20px;
   font-weight: 700;
   white-space: nowrap;
-}
-.eleslider:nth-child(2) p {
-  color: rgb(47, 241, 40);
-}
-.eleslider:nth-child(3) p {
-  color: #0d1583;
-}
-.eleslider:nth-child(4) p {
-  color: #000;
 }
 @media only screen and (max-width: 610px) {
   body {
