Nadhir New Update

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -3,9 +3,11 @@
   font-family: "Urbanist", sans-serif;
   margin: 0;
   padding: 0;
+  transition: 300ms;
 }
 body {
   min-height: 100vh;
+  max-height: fit-content;
   background: linear-gradient(
     115deg,
     #fff,
@@ -13,13 +15,15 @@ body {
     var(--prColor) 70%,
     var(--prColor) 100%
   );
-  overflow: hidden;
+  overflow: auto;
 }
-:root {
-  --prColor: #9c27b0;
-  --btnBg: #9b27b0a8;
-  --brBtn: #9b27b0e0;
+@import url(colorStyle.css);
+::selection{
+  background-color: var(--btnBg);
+  color: #fff;
 }
+
+/*  header  */
 header {
   width: 100%;
   height: 100px;
@@ -36,13 +40,13 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 250px;
+  width: 150px;
 }
 nav ul {
   display: flex;
   flex-direction: row;
   list-style: none;
-  width: 200px;
+  width: 100px;
   justify-content: space-between;
 }
 nav ul li {
@@ -56,6 +60,7 @@ nav ul li a {
   color: #000;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 nav ul li .active {
   color: var(--prColor) !important;
@@ -77,7 +82,7 @@ nav ul li .active::after {
 nav ul li a:hover:after {
   width: 100%;
 }
-
+/*  Home  */
 .content {
   width: 80%;
   height: calc(55vh);
@@ -143,10 +148,11 @@ nav ul li a:hover:after {
 }
 .content > div:last-child a:hover {
   background-color: var(--prColor);
+  text-shadow: 0px 0px 2px #fff;
 }
 .icon {
-  position: absolute;
-  bottom: 10px;
+  position: relative;
+  margin-top: 70px;
   left: 100px;
   display: flex;
   flex-direction: row;
@@ -224,15 +230,66 @@ nav ul li a:hover:after {
   font-weight: 700;
   white-space: nowrap;
 }
+/*  about  */
+.about{
+  width: 80%;
+  height: fit-content;
+  padding-left: 100px;
+  padding-right: 20px;
+  flex-direction: column;
+  transform: translateY(7px);
+  display: none;
+}
+.about h1{
+  font-size: 30px;
+  font-weight: 900;
+  color: var(--prColor);
+  margin-bottom: 30px;
+}
+.par{
+  width: 300px;
+}
+.par h2{
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: var(--brBtn);
+}
+.par p{
+  color: #000;
+  font-size: 15px;
+  font-weight: 500;
+}
+.about span{
+  width: 300px;
+  height: 1px;
+  border-radius: 5px;
+  border: 1px solid var(--btnBg);
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+
+/* responsive  */
+
+/* this media for title  */
+@media only screen and (max-width: 310px){
+  .title h1 {
+    font-size: 25px !important;
+  }
+  .title div {
+    font-size: 16px;
+  }
+}
 @media only screen and (max-width: 610px) {
   body {
     background: #fff;
     display: flex;
     flex-direction: column;
-    overflow: visible;
   }
   header {
     justify-content: space-between;
+  }
+  nav{
+    flex-wrap: wrap;
   }
   .content {
     padding-left: 25px;
@@ -254,7 +311,7 @@ nav ul li a:hover:after {
   }
   .icon {
     left: 50%;
-    transform: translate(-50%, 115px);
+    transform: translateX(-50%);
     position: relative;
   }
   .dots {
@@ -273,10 +330,28 @@ nav ul li a:hover:after {
   .title div {
     margin-bottom: 12px;
   }
+  .about{
+    padding-left: 25px;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    margin-top: 50px;
+    text-align: center;
+  }
+  .about span{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 90%;
+  }
+  .par{
+    width: 90%;
+  }
+  .about h1{
+    font-size: 25px;
+  }
 }
 @media only screen and (min-width: 611px) and (max-width: 784px) {
   body {
-    min-height: 100vh;
     background: linear-gradient(
       to right,
       #fff,
@@ -284,7 +359,6 @@ nav ul li a:hover:after {
       var(--prColor) 63%,
       var(--prColor) 100%
     );
-    overflow: hidden;
   }
   .content {
     padding-left: 25px;
@@ -308,18 +382,23 @@ nav ul li a:hover:after {
   .content > p:first-of-type {
     font-size: 13px;
   }
+  .about{
+    padding-left: 25px;
+    margin-top: 20px;
+  }
+  .about h1{
+    font-size: 27px;
+  }
 }
 @media only screen and (min-width: 785px) and (max-width: 889px) {
   body {
-    min-height: 100vh;
     background: linear-gradient(
       115deg,
       #fff,
-      #fff 65%,
-      var(--prColor) 65%,
+      #fff 62%,
+      var(--prColor) 62%,
       var(--prColor) 100%
     );
-    overflow: hidden;
   }
   .content {
     padding-left: 50px;
@@ -337,10 +416,13 @@ nav ul li a:hover:after {
   .icon {
     left: 50px;
   }
+  .about{
+    padding-left: 50px;
+    margin-top: 20px;
+  }
 }
 @media only screen and (min-width: 890px) and (max-width: 1250px) {
   body {
-    min-height: 100vh;
     background: linear-gradient(
       115deg,
       #fff,
@@ -348,7 +430,6 @@ nav ul li a:hover:after {
       var(--prColor) 65%,
       var(--prColor) 100%
     );
-    overflow: hidden;
   }
   .content {
     padding-left: 50px;
@@ -365,5 +446,16 @@ nav ul li a:hover:after {
   }
   .icon {
     left: 50px;
+  }
+  .about{
+    padding-left: 50px;
+    margin-top: 20px;
+  }
+}
+@media only screen and (min-width: 1250px){
+  .icon{
+    position: absolute;
+    bottom: 7px !important;
+    margin: 0;
   }
 }
