--- a/css/login.css
+++ b/css/login.css
@@ -299,3 +299,25 @@ form button:hover{
     margin-left: 0;
   }
 }
+@media screen and (min-height: 500px) and (max-height: 700px) {
+  .content{
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-height: 701px) and (max-height: 800px) {
+  .content{
+    margin-top: 25px;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-height: 801px) and (max-height: 1000px) {
+  .content{
+    margin-top: 7%;
+  }
+}
+@media screen and (min-height: 1001px){
+  .content{
+    margin-top: 15%;
+  }
+}
