--- a/css/signUp.css
+++ b/css/signUp.css
@@ -8,65 +8,65 @@
 @import url(../../css/colorStyle.css);
 body{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient(to left, var(--prColor) 30% , transparent 30%);
 }
 header {
-    width: 70%;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    margin: auto;
-  }
-  .logo img {
-    width: 70px;
-    height: 60px;
-    margin-top: 20px;
-    margin-left: 25px;
-  }
-  nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 150px;
-  }
-  nav ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    width: 120px;
-    justify-content: space-between;
-  }
-  nav ul li {
-    width: fit-content;
-    white-space: nowrap;
-  }
-  nav ul li a {
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: 600;
-    color: #000;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-  }
-  nav ul li a::after {
-    content: "";
-    width: 0%;
-    height: 2px;
-    display: block;
-    box-sizing: border-box;
-    background: var(--prColor);
-    margin: auto;
-    transition: all 0.5s ease 0s;
-    font-size: 20px;
-  }
-  nav ul li .active::after {
-    width: 100% !important;
-  }
-  nav ul li a:hover:after {
-    width: 100%;
-  }
+  width: 70%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+}
+.logo img {
+  width: 70px;
+  height: 60px;
+  margin-top: 20px;
+  margin-left: 25px;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+}
+nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  width: 120px;
+  justify-content: space-between;
+}
+nav ul li {
+  width: fit-content;
+  white-space: nowrap;
+}
+nav ul li a {
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 600;
+  color: #000;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+nav ul li a::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  display: block;
+  box-sizing: border-box;
+  background: var(--prColor);
+  margin: auto;
+  transition: all 0.5s ease 0s;
+  font-size: 20px;
+}
+nav ul li .active::after {
+  width: 100% !important;
+}
+nav ul li a:hover:after {
+  width: 100%;
+}
 .content{
     width: 70%;
     display: flex;
@@ -124,6 +124,7 @@ header {
     font-size: 17px;
     color: #000;
     font-weight: 500;
+    position: relative;
 }
 .in input{
     height: 35px !important;
@@ -159,12 +160,14 @@ header {
     font-weight: 700;
     outline: none;
 }
-.inp i{
+.in i,.inp i{
   position: absolute;
   bottom: 10px;
   right: 10px;
-  cursor: pointer;
   color: var(--prColor);
+}
+#show{
+  cursor: pointer;
 }
 form button{
     margin-top: 15px;
@@ -288,22 +291,107 @@ form button:hover{
     font-size: 30px;
   }
 }
-@media only screen and (min-width: 890px) and (max-width: 1250px) {
+@media only screen and (min-width: 890px) and (max-width: 1249px) {
   header{
     width: 77%;
   }
   .content img{
     width: 300px;
-    height: 300px;
+    height: 350px;
+    margin-left: 50px;
   }
   .content{
     width: 77%;
-    justify-content: center;
+    justify-content: flex-start;
   }
-  .form h1 {
+  .content .form{
+    flex-basis: 420px;
+    height: 460px;
+  }
+  .form h1{
+    flex-basis: 50px;
     font-size: 30px;
+  }
+  .form h2{
+    flex-basis: 35px;
+    font-size: 20px;
+  }
+  .name{
+    margin-bottom: 7px;
+  }
+  .name .in{
+    font-size: 15px;
+  }
+  .in input,
+  .inp input{
+    margin-top: 5px;
+    height: 32px !important;
+  }
+  form button{
+    height: 35px;
+  }
+  .inp{
+    font-size: 15px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+  }
+  .inp label{
+    margin-bottom: 5px;
   }
   .logo img {
     margin-left: 0;
+  }
+}
+@media screen and (min-width: 1250px) and (max-width: 1450px){
+  .content .form{
+    flex-basis: 420px;
+    height: 520px;
+  }
+  .form h1{
+    flex-basis: 50px;
+    font-size: 32px;
+  }
+  .form h2{
+    flex-basis: 35px;
+    font-size: 22px;
+  }
+  .name{
+    margin-bottom: 8px;
+  }
+  .name .in{
+    font-size: 15px;
+  }
+  .in input{
+    margin-top: 7px;
+  }
+  .inp{
+    font-size: 15px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+  .inp label{
+    margin-bottom: 7px;
+  }
+}
+@media screen and (min-height: 500px) and (max-height: 700px) {
+  .content{
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-height: 701px) and (max-height: 800px) {
+  .content{
+    margin-top: 25px;
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-height: 801px) and (max-height: 1000px) {
+  .content{
+    margin-top: 7%;
+  }
+}
+@media screen and (min-height: 1001px){
+  .content{
+    margin-top: 15%;
   }
 }
